--- a/css/style.css
+++ b/css/style.css
@@ -310,3 +310,27 @@ main
   display: flex;
   flex-direction: column;
 }
+
+#frammenti-container
+{
+  display: flex;
+  flex-direction: row;
+}
+
+#frammenti-writing
+{
+  display: flex;
+  flex-direction: column;
+}
+
+#frammenti-hourglass-figure
+{
+  display: flex;
+  flex-basis: 20%;
+}
+
+#frammenti-hourglass-img
+{
+  max-width: 50%;
+  max-height: 50%;
+}
