--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,9 @@ main
   flex-direction: column;
 }
 
+
+
+
 .coupled-articles-image-and-comment-container
 {
   display: flex;
@@ -322,7 +325,7 @@ main
   max-height: 50%;
 }
 
-#three-articles-container
+.three-columns-container
 {
   display: flex;
   flex-direction: row;
@@ -350,4 +353,36 @@ main
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+#blog-e-rubriche-cartoon-section
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.three-columns-column
+{
+  display: flex;
+  flex-direction: column;
+  flex-basis: 33%;
+}
+
+.flex-row-container
+{
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-column-container
+{
+  display: flex;
+  flex-direction: column;
+}
+
+.half-container
+{
+  display: flex;
+  flex-basis: 50%;
 }
