--- a/css/style.css
+++ b/css/style.css
@@ -190,13 +190,13 @@ main
 #temi-caldi-caption
 {
   display: flex;
-  flex-basis: 20%;
+  flex-basis: 15%;
 }
 
 #temi-caldi-list-container
 {
   display: flex;
-  flex-basis: 80%;
+  flex-basis: 85%;
 }
 
 #temi-caldi-list
@@ -240,9 +240,14 @@ main
   max-width: 300px;
 }
 
+.not-first
+{
+  margin-left: 2em;
+}
+
 .corriere-tv-box-img
 {
-  width: 16em;
+  width: 24em;
   height: 5em;
 }
 
@@ -256,7 +261,6 @@ main
 .corriere-tv-box-title
 {
   font-size: 0.8em;
-  padding-right: 2em;
 }
 
 .corriere-tv-box-attribution
@@ -264,6 +268,7 @@ main
   font-size: 0.6em;
   margin-top: 0.2em;
   color: #53bbf1;
+  font-style: italic;
 }
 
 #update-badge-container
@@ -287,7 +292,7 @@ main
 
 #main-articles
 {
-  margin-top: 4em;
+  margin-top: 3em;
   border-top: 1px solid #e6e6e6;
 }
 
@@ -318,6 +323,7 @@ main
 .attribution
 {
   color: #0a5678;
+  font-style: italic;
 }
 
 #main-article-figure
@@ -331,7 +337,7 @@ main
   width: 100%;
   height: 100%;
   max-height: 500px;
-  margin-bottom: -45px;
+  margin-bottom: -4em;
 }
 
 #main-article-additional-info
@@ -390,6 +396,7 @@ main
   display: flex;
   flex-direction: column;
   flex-basis: 70%;
+  padding-right: 1.1em;
 }
 
 .right-container
@@ -403,21 +410,67 @@ main
 {
   display: flex;
   flex-direction: row;
+  padding-top: 1em;
+  border-top: 1px solid #e6e6e6;
 }
 
 .coupled-articles-article-container
 {
   display: flex;
   flex-direction: column;
+  flex-basis: 50%;
 }
-
-
-
 
 .coupled-articles-image-and-comment-container
 {
   display: flex;
   flex-direction: row;
+  margin-top: 0.7em;
+}
+
+.coupled-articles-left-article-container
+{
+  border-right: 1px solid #e6e6e6;
+  padding-right: 0.6em;
+}
+
+.coupled-articles-right-article-container
+{
+  padding-left: 0.9em;
+}
+
+.coupled-articles-top-writing
+{
+  font-weight: bolder;
+  color: #7a7a7a;
+  font-size: 0.8em;
+  margin-bottom: 0.5em;
+}
+
+.coupled-articles-title
+{
+  font-size: 1.3em;
+}
+
+.coupled-articles-figure
+{
+  margin-right: 0.7em;
+}
+
+.coupled-articles-image
+{
+  width: 30em;
+  height: 6em;
+}
+
+.coupled-articles-attribution
+{
+  margin-bottom: 0.5em;
+}
+
+.coupled-articles-text-font-size
+{
+  font-size: 0.8em;
 }
 
 #corriere-tv-right-first-article
