--- a/css/style.css
+++ b/css/style.css
@@ -657,6 +657,51 @@ main
   max-height: 80%;
 }
 
+#three-articles-top-top-writing-bar-container
+{
+  align-items: center;
+  margin-top: 1em;
+  border-top: 1px solid #e6e6e6;
+  padding-top: 0.8em;
+}
+
+#three-articles-top-top-writing
+{
+  color: #0a5278;
+  margin-bottom: 0.4em;
+}
+
+#three-articles-bar-after-top-top-writing
+{
+  background-color: #83a7ba;
+  width: 2.6em;
+  height: 0.12em;
+  margin-bottom: 0.7em;
+}
+
+#three-articles-container
+{
+  background-color: #f2f6f8;
+}
+
+.three-articles-article-container
+{
+  flex-basis: 33%;
+  padding: 0.4em 0.6em 0.2em 0.6em;
+}
+
+.three-articles-article-img
+{
+  width: 100%;
+  height: auto;
+}
+
+.three-articles-article-title
+{
+  font-size: 0.8em;
+  margin-bottom: 1em;
+}
+
 .three-columns-container
 {
   display: flex;
