--- a/css/style.css
+++ b/css/style.css
@@ -850,10 +850,51 @@ main
   padding: 1.5em 1.5em 1em 1.5em;
 }
 
+#editoriali-commenti
+{
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  padding-bottom: 1em;
+  box-shadow: 0 2px 5px -1px black;
+}
+
 .editoriali-commenti-comment
 {
   display: flex;
   flex-direction: row;
+  margin-top: 1em;
+}
+
+#editoriali-commenti-writing
+{
+  align-items: center;
+  margin: 1em 0 1em 1em;
+  color: #666;
+}
+
+.editoriali-commenti-comment-title-and-author
+{
+  border-bottom: 1px solid #e6e6e6;
+  padding-bottom: 1em;
+}
+
+.editoriali-commenti-title
+{
+  font-size: 1em;
+  margin-bottom: 0.5em;
+}
+
+.editoriali-commenti-pfp
+{
+  object-fit: none;
+  margin-right: 0.5em;
+  margin-left: 0.5em;
+}
+
+.four-underlying-lines-img
+{
+  width: 90%;
+  height: 2em;
 }
 
 .right-generic-article-container
