--- a/css/style.css
+++ b/css/style.css
@@ -926,6 +926,24 @@ main
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.extra-news-container
+{
+  background-color: #eff4f7;
+  padding: 1em 1em 1em 1em;
+}
+
+.extra-news-right-generic-article-container
+{
+  margin: 1em 1em 0 1em;
+}
+
+.extra-news-coupled-articles-container
+{
+  margin-top: 1.5em;
 }
 
 #blog-e-rubriche-cartoon-section
